<resources>
    <string name="app_name">SilkSoar</string>
    <string name="silksoar_main">SILKSOAR</string>
    <string name="btn_start">START</string>
    <string name="btn_about">ABOUT</string>
    <string name="send">Send</string>
    <string name="game_over">Game Over!</string>
    <string name="buttons_slow">Buttons - Slow</string>
    <string name="buttons_fast">Buttons - fast</string>
    <string name="sensors">Sensors</string>
    <string name="default_edit_text">Name</string>
    <string name="back_btn">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="score_0">Score: 0</string>
</resources>