<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOverActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/gameover_IMG_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/game_over_background"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gameOver_LBL_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_margin="@dimen/default_margin"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/gameOver_ET_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/default_edit_text"
        android:layout_below="@+id/gameOver_LBL_text"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gameover_BTN_backToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameOver_ET_name"
        android:textAlignment="center"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/send"
        android:layout_centerHorizontal="true"
        />



</RelativeLayout>